--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,63 @@
+@import './variables.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --border: 240, 5.9%, 90%;
+    --input: 240, 5.9%, 90%;
+    --ring: 240, 5.9%, 10%;
+    --radius: 0.5rem;
+
+    --header-h: 6.375rem;
+
+    --success: 155, 100%, 37%;
+    --success-light: 156, 56%, 80%;
+
+    --error: 14, 100%, 56%;
+    --error-light: 15, 100%, 93%;
+
+    --warning: 40, 100%, 56%;
+    --warning-light: 40, 100%, 93%;
+
+    --info: 225, 98%, 35%;
+    --info-light: 227, 56%, 94%;
+
+    --divider: 240, 85%, 90%;
+  }
+
+  body {
+    color: var(--fg) !important;
+    background-color: var(--bg) !important;
+    font-family: Roboto;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.is-sticky {
+  animation: slideDown 0.5s ease-out;
+  background-color: #fff;
+  box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.2);
 }
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+.ant-card-body {
+  padding: unset !important;
+}
+
+.ant-drawer-body {
+  padding: 24px 0 !important;
+}
+
